fix: mobile interface submitSection button spacing

--- a/src/components/primitives/Button/button.module.sass
+++ b/src/components/primitives/Button/button.module.sass
@@ -41,4 +41,9 @@
         font-size: 12px
         color: $neutralGray
         text-decoration: underline
+
+    @include mobile
+    
+        &.submit
+            margin-right: 5vw
         
