--- a/src/components/submitSection/submitsection.module.sass
+++ b/src/components/submitSection/submitsection.module.sass
@@ -10,6 +10,6 @@
         position: fixed
         bottom: 0
         padding-block: 8px
-        padding-right: 20vw !important
         background-color: $white
-        margin-right: 10vw !important
+        justify-content: space-between
+
